retrieve_ENO_DEV1/objects/Production__c.object
<CustomObject>
    <description>Shows the Production Profiles</description>
    <fields>
        <fullName>Choreographer_s__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Choreographer(s)</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Choreographer(s))</relationshipLabel>
        <relationshipName>Productions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Composer__c</fullName>
        <label>Composer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conductor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conductor</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Conductor)</relationshipLabel>
        <relationshipName>Productions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copyright__c</fullName>
        <label>Copyright</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costume_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Costume Designer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Costume Design)</relationshipLabel>
        <relationshipName>Productions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_composition__c</fullName>
        <label>Date of Composition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Production_Live_or_Dead__c</fullName>
        <label>Is Production Live or Dead?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Librettist__c</fullName>
        <label>Librettist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lighting_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lighting Designer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Lighting Designer)</relationshipLabel>
        <relationshipName>Productions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Movement_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Movement Director</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Movement Director)</relationshipLabel>
        <relationshipName>Productions8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Co_Producer_Rental_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Co-Producer/Rental 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productions (Name of Co-Producer/Rental 2)</relationshipLabel>
        <relationshipName>Productions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Co_Producer_Rental_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Co-Producer/Rental 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productions (Name of Co-Producer/Rental 3)</relationshipLabel>
        <relationshipName>Productions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Co_Producer_Rental_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Co-Producer/Rental 4</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productions (Name of Co-Producer/Rental 4)</relationshipLabel>
        <relationshipName>Productions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Co_Producer_Rental__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Co-Producer/Rental</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productions</relationshipLabel>
        <relationshipName>Productions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions</relationshipLabel>
        <relationshipName>Productions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Royalties__c</fullName>
        <label>Royalties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Set Designer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Set Designer)</relationshipLabel>
        <relationshipName>Productions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Set_Storage_Location__c</fullName>
        <label>Set Storage Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>Eg &apos;Vixen&apos; (rather than &apos;Cunning Little Vixen&apos;)</description>
        <label>Short Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sound_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sound Designer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Sound Designer)</relationshipLabel>
        <relationshipName>Productions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Studio_dur_no_of_sessions__c</fullName>
        <inlineHelpText>Eg 4 weeks/ 41 sessions</inlineHelpText>
        <label>Studio (dur &amp; no of sessions)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Origin_language_Alternative_title__c</fullName>
        <description>(Original language / Alternative Title )</description>
        <label>Title - Original language / Alternative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_by__c</fullName>
        <label>Translation by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Production__c</fullName>
        <label>Type of Production</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENO Production</fullName>
                </value>
                <value>
                    <fullName>Co-Pro Production</fullName>
                </value>
                <value>
                    <fullName>Hire Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Video Designer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Productions (Video Designer)</relationshipLabel>
        <relationshipName>Productions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>